<resources>
    <string name="app_name">유링크</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="school_certificate_info">
        <![CDATA[ <b><font color="#674fee">시간표 등록</font></b>과 <b><font color="#674fee">게시판 연동</font></b>을 위해 <b><font color="#674fee">최초 1회</font></b>
        <br>학교 이메일 인증이 필요합니다.
        ]]>
    </string>
    <string name="school_certificate_codesent">
        해당 이메일로 인증코드를 발송했습니다. 인증코드를 받지 못했을 경우 입력하신 이메일 정보가 맞는지 확인해 주세요.
    </string>
    <string name="school_certificate_checkspam">
        유링크가 발송한 이메일이 스팸 메일로 분류된 것은 아닌지 확인해 주세요. 스팸 메일함에도 메일이 없다면, 다시 한번 ‘인증 요청’을 눌러 주세요.
    </string>
    <string name="school_certificate_wrongcode">
        인증코드가 옳지 않습니다. \n 다시한번 확인해 주세요.
    </string>
    <string name="school_certificate_ok">
        인증이 완료되었습니다.
    </string>
    <string name="major_change_changed">
        변경되었습니다.
    </string>
    <string name="major_change_empty">
        학과를 입력해 주세요.
    </string>
    <string name="change_nickname_info">
        최소 2자 ~ 최대 14자의 한글,영어,숫자 가능\n특수문자 및 공백 사용 불가
    </string>
    <string name="change_nickname_available">
        사용 가능한 닉네임입니다.
    </string>
    <string name="change_nickname_using">
        사용 중인 닉네임입니다.
    </string>
    <string name="appwidget_text">ulink</string>
    <string name="first_popup">"캘린더는 과목별 채팅방에 등록된 공지가\n 자동으로 추가되는 일정 관리 시스템입니다."</string>
    <string name="login_popup">"아이디와 비밀번호를 확인해주세요."</string>
    <string name="search_fail">"검색 결과를 확인해 주세요."</string>
    <string name="agree_popup">"필수 이용약관에 동의해 주세요."</string>
    <string name="id">"사용가능한 아이디입니다."</string>
    <string name="nickname">"사용가능한 닉네임입니다."</string>
    <string name="missing_cord">"휴대폰 번호를 정확하게 입력했는지 다시 확인해 주세요. 인증번호가 수신되지 않는다면 휴대폰 내 차단 설정을 확인해 주세요. 휴대폰 스팸 차단을 해제한 수 다시 시도해 주세요."</string>
    <string name="authentication">"인증이 완료되었습니다."</string>
    <string name="year_fail">"입학년도를 선택해주세요."</string>
    <string name="id_fail">"중복된 아이디입니다."</string>
    <string name="nickname_fail">"중복된 닉네임입니다."</string>
    <string name="authentication_fail">"인증에 실패했습니다. 다시 시도해주세요."</string>
    <string name="password_fail">"비밀번호는 최소 8자 이상으로 설정해주세요."</string>
    <string name="service_terms_condition1">"유링크 서비스 이용약관은 회사가 서비스를 제공함에 있어, 회사와 이용자 간의 권리, 의무 및 책임 사항 등을 규정함을 목적으로합니다."</string>
    <string name="service_terms_condition2">"이 약관에서 사용하는 용어의 정의는 다음과 같습니다."</string>
    <string name="service_terms_condition2_1">"1. \"회사\"란, 서비스를 제공하는 주체를 말합니다."</string>
    <string name="service_terms_condition2_2">"2. \"서비스\"란, 회사가 제공하는 모든 서비스 및 기능을 말합니다."</string>
    <string name="service_terms_condition2_3">"3. \"이용자\"란, 이 약관에 따라 서비스를 이용하는 회원 및 비회원을 말합니다."</string>
    <string name="service_terms_condition2_4">"4. \"회원\"이란, 서비스에 회원등록을 하고 서비스를 이용하는자를 말합니다."</string>
    <string name="service_terms_condition2_5">"5. \"비회원\"이란, 서비스에 회원등록을 하지 않고 서비스를 이용하는 자를 말합니다.</string>
    <string name="service_terms_condition2_6">"6. \"게시물\"이란, 서비스에 게재된 문자, 이모티콘 등을 말합니다."</string>
    <string name="service_terms_condition2_7">"7. \"커뮤니티\"란, 게시물을 게시할 수 있는 공간을 말합니다."</string>
    <string name="service_terms_condition2_8">"8. \"이용 기록\"이란, 이용자가 서비스를 이용하면서 직접 생성한시간표, 게시글 등을 말합니다."</string>
    <string name="service_terms_condition2_9">"9. \"로그 기록\"이란, 이용자가 서비스를 이용하면서 자동으로 생성된 IP 주소, 접속시간 등을 말합니다."</string>
    <string name="service_terms_condition2_10">"10. \"기기 정보\"란, 이용자의 통신 기기에서 수집된 운영체제 종류, ADID 등을 말합니다."</string>
    <string name="service_terms_condition2_11">"11. \"계정\"이란, 이용계약을 통해 생성된 회원의 고유 아이디와 이에 수반하는 정보를 말합니다."</string>
    <string name="service_terms_condition2_12">"12. \"서비스 내부 알림 수단\"이란, 알림, 공지사항, 내정보 메뉴 등을 말합니다."</string>
    <string name="service_terms_condition2_13">"13. \"연락처\"란, 회원가입, 본인 인증 등을 통해 수집된 이용자의 이메일, 휴대전화 번호 등을 의미합니다."</string>
    <string name="service_terms_condition2_14">"14. \"관련법\"이란, 정보통신망 이용촉진 및 정보보호 등에 관한 법률, 개인정보보호법, 통신비밀보호법 등 관련 있는 국내 법령을 말합니다."</string>
    <string name="service_terms_condition2_15">"15. \"본인 인증\"이란, 휴대전화 번호 등을 이용한 본인 확인 절차를 말합니다."</string>
    <string name="service_terms_condition2_16">"16. \"학교 인증\"이란, 학교 이메일을 이용한 학적 확인 절차를 말합니다."</string>
    <string name="service_terms_condition2_end">"1항에서 정의되지 않은 약관 내 용어의 의미는 일반적인 이용관행에 의합니다."</string>
    <string name="service_terms_condition3">"제3조(약관 등의 명시와 설명 및 개정)"</string>
    <string name="service_terms_condition3_1">"1. 회사는 이 약관을 회원가입 화면에 게시합니다."</string>
    <string name="service_terms_condition3_2">"2. 회사는 관련법을 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다."</string>
    <string name="service_terms_condition3_3">"3. 개정 내용이 회원에게 불리할 경우, 적용일자 및 개정사유를 명시하여 현행약관과 함께 “공지사항”에 30일 간 게시합니다."</string>
    <string name="service_terms_condition3_4">"4. 회원이 개정약관의 적용에 동의하지 않는 경우, 이용계약을 해지함으로써 거부 의사를 표시할 수 있습니다. 단, 30일 내에 거부 의사 표시를 하지 않을 경우 약관에 동의한 것으로 간주합니다"</string>
    <string name="service_terms_condition3_5">"5. 회원은 약관 일부분만을 동의 또는 거부할 수 없습니다."</string>
    <string name="service_terms_condition3_6">"6. 비회원이 서비스를 이용할 경우, 이 약관에 동의한 것으로 간주합니다."</string>
    <string name="service_terms_condition4">"1. 회사는 다음 서비스를 제공합니다."</string>
    <string name="service_terms_condition4_1">"(1) 대학 수강편람 데이터 기반 시간표 작성 서비스\n(2) 시간표 기반 수업별 소통공간 제공 서비스\n(3) 자율 공지 등록에 기반한 일정 캘린더 서비스"</string>
    <string name="service_terms_condition4_2">"2. 회사는 운영상, 기술상의 필요에 따라 제공하고 있는 서비스를 변경할 수 있습니다."</string>
    <string name="service_terms_condition4_3">"3. 회사는 이용자의 개인정보 및 서비스 이용 기록에 따라 서비스 이용에 차이를 둘 수 있습니다."</string>
    <string name="service_terms_condition4_4">"4. 회사는 천재지변, 인터넷 장애, 경영 악화 등으로 인해 서비스를 더 이상 제공하기 어려울 경우, 서비스를 통보 없이 중단할 수 있습니다."</string>
    <string name="service_terms_condition4_5">"5. 회사는 1항부터 전항까지와 다음 내용으로 인해 발생한 피해에 대해 어떠한 책임을 지지 않습니다.</string>
    <string name="service_terms_condition4_6">"(1) 모든 서비스, 게시물, 이용 기록의 진본성, 무결성, 신뢰성, 이용가능성"</string>
    <string name="service_terms_condition4_7">"(2) 서비스 이용 중 타인과 상호 간에 합의한 내용"</string>
    <string name="service_terms_condition4_8">"(3) 게시물에 게시된 하이퍼링크 등 회사가 제공하지 않은 외부 서비스에서 발생한 피해"</string>
    <string name="service_terms_condition4_9">"(4) 이용자의 귀책사유 또는 회사의 귀책 사유가 아닌 사유로 발생한 이용자의 피해"</string>
    <string name="service_terms_condition5_1">"1. 회사와 회원의 서비스 이용계약은 서비스 내부의 회원가입 화면의 가입 양식에 따라 회원정보를 기입한 후 필수 약관에 동의한다는 의사표시를 한 비회원의 이용신청에 대하여, 서비스 화면에 이용승낙을 표시하는 방법 등으로 의사표시를 하면서 체결됩니다."</string>
    <string name="service_terms_condition5_2">"2. 승낙은 신청순서에 따라 순차적으로 처리되며, 회원가입의 성립시기는 회사의 승낙이 회원에게 도달한 시점으로 합니다."</string>
    <string name="service_terms_condition5_3">"3. 회사는 부정사용방지 및 본인확인을 위해 회원에게 본인 인증 및 학교 인증을 요청할 수 있습니다."</string>
    <string name="service_terms_condition6_1">"1. 회원이 회사와 체결한 서비스 이용계약은 처음 이용계약을 체결한 본인에 한해 적용됩니다."</string>
    <string name="service_terms_condition6_2">"2. 회원은 회원가입 시 등록한 정보에 변동이 있을 경우, 즉시 \"내정보\" 메뉴 등을 이용하여 정보를 최신화해야 합니다.</string>
    <string name="service_terms_condition6_3">"3. 회원의 아이디, 비밀번호, 이메일, 대학생 정보 등 모든 개인정 보의 관리책임은 본인에게 있으므로, 타인에게 양도 및 대여할 수 없으며, 유출되지 않도록 관리해야 합니다. 만약 본인의 아이디 및 비밀번호를 타인이 사용하고 있음을 인지했을 경우 바로 서비 스 내부의 문의 창구에 알려야 하고, 안내가 있는 경우 이에 즉시 따라야 합니다.</string>
    <string name="service_terms_condition6_4">"4. 회사는 2항부터 전항까지를 이행하지 않아 발생한 피해에 대해 어떠한 책임을 지지 않습니다.</string>
    <string name="service_terms_condition7_1">"1. 회원은 언제든지 본인의 계정으로 로그인한 뒤 서비스 내부의 \"탈퇴하기\" 버튼을 누르는 방법으로 탈퇴를 요청할 수 있습니다. 회사는 해당 요청을 확인한 후 탈퇴를 처리합니다."</string>
    <string name="service_terms_condition7_2">"2. 탈퇴 처리가 완료되었더라도, 회원이 게시한 게시물과 댓글은 삭제되지 않습니다."</string>
    <string name="service_terms_condition7_3">"3. 회사는 천재지변, 테러, 폐교 등 불가피한 사유로 더 이상 서비스를 제공할 수 없을 경우, 회원의 동의 없이 회원자격을 박탈할 수 있습니다."</string>
    <string name="service_terms_condition7_4">"4. 회사는 1항부터 전항까지로 인해 발생한 피해에 대해 어떠한 책임을 지지 않습니다."</string>
    <string name="service_terms_condition8_1">"1. 회사가 회원에 대한 통보를 하는 경우, 서비스 내부 알림 수단과 회원의 연락처를 이용합니다."</string>
    <string name="service_terms_condition8_2">"2. 회사는 다수의 회원에 대한 통보를 할 경우 공지사항 혹은 알림에 게시함으로써 개별 통보를 대신할 수 있습니다."</string>
    <string name="service_terms_condition8_3">"3. 회원이 30일 이내에 의사 표시를 하지 않을 경우, 통보 내용에 대해 동의한 것으로 간주합니다.</string>
    <string name="service_terms_condition9_1">"1. 회사는 유용하고 편리한 서비스를 제공하기 위해, 2020년부터 서비스 및 서비스 내부의 기능(시간표, 게시판, 캘린더 등)을 직접 설계 및 운영합니다. 저작권법에 따라 데이터베이스 제작자는 복제권 및 전송권을 포함한 데이터베이스 전부에 대한 권리를 가지고 있으며, 이는 법률에 따라 보호를 받는 대상입니다. 그러므로 이용자는 데이터베이스 제작자인 회사의 승인 없이 데이터베이스의 전부 또는 일부를 복제·배포·방송 또는 전송할 수 없습니다."</string>
    <string name="service_terms_condition9_2">"2. 회사가 작성한 게시물에 대한 권리는 회사에게 귀속되며, 회원이 작성한 게시물에 대한 권리는 회원에게 귀속됩니다. 단, 회사는 서비스의 운영, 확장, 홍보 등의 필요한 목적으로 회원의 저작물을 합리적이고 필요한 범위 내에서 별도의 허락 없이 수정하여 무상으로 사용하거나 제휴사에게 제공할 수 있습니다. 이 경우, 회원의 개인정보는 제공하지 않습니다."</string>
    <string name="service_terms_condition9_3">"3. 회사는 전항 이외의 방법으로 회원의 게시물을 이용할 경우, 서비스 내부 알림 수단과 회원의 연락처를 이용하여 회원의 동의를 받아야 합니다."</string>
    <string name="service_terms_condition10_1">"1. 회사는 관련법에 의거하여 회원의 게시물로 인한 법률상 이익침해를 근거로, 다른 이용자 또는 제3자가 회원 또는 회사를 대상으로 하여 민형사상의 법적 조치를 취하거나 관련된 게시물의 게시 중단을 요청하는 경우, 회사는 해당 게시물에 대한 접근을 잠정적으로 제한하거나 삭제할 수 있습니다."</string>
    <string name="service_terms_condition11_1">"1. 회사는 서비스의 제공을 위해 서비스 내부에 광고를 게재할 수 있습니다."</string>
    <string name="service_terms_condition11_2">"2. 회사는 이용자의 이용 기록을 활용한 광고를 게재할 수 있습니다."</string>
    <string name="service_terms_condition11_3">"3. 회사는 회원이 광고성 정보 수신에 동의할 경우, 서비스 내부 알림 수단과 회원의 연락처를 이용하여 광고성 정보를 발신할 수 있습니다.</string>
    <string name="service_terms_condition11_4">"4. 회사는 광고 게재 및 동의된 광고성 정보의 발신으로 인해 발생한 피해에 대해 어떠한 책임을 지지 않습니다."</string>
    <string name="service_terms_condition12_1">"1. 이용자는 다음과 같은 행위를 해서는 안됩니다."</string>
    <string name="service_terms_condition12_2">"(1) 개인정보 또는 계정 기만, 침해, 공유 행위"</string>
    <string name="service_terms_condition12_3">"(2) 개인정보를 허위, 누락, 오기, 도용하여 작성하는 행위"</string>
    <string name="service_terms_condition12_4">"(3) 타인의 개인정보 및 계정을 수집, 저장, 공개, 이용하는 행위"</string>
    <string name="service_terms_condition12_5">"(4) 자신과 타인의 개인정보를 제3자에게 공개, 양도하는 행위"</string>
    <string name="service_terms_condition12_6">"(5) 다중 계정을 생성 및 이용하는 행위"</string>
    <string name="service_terms_condition12_7">"(6) 자신의 계정을 이용하여 타인의 요청을 이행하는 행위"</string>
    <string name="service_terms_condition12_8">"(7) 시스템 부정행위</string>
    <string name="service_terms_condition12_9">"(8) 해당 대학교의 학부 재학생 및 졸업생이 아닌 이용자가 서비스를 이용하는 행위"</string>
    <string name="service_terms_condition12_10">"(9) 허가하지 않은 방식의 서비스 이용 행위"</string>
    <string name="service_terms_condition12_11">"(10) 회사의 모든 재산에 대한 침해 행위"</string>
    <string name="service_terms_condition12_12">"(11) 업무 방해 행위"</string>
    <string name="service_terms_condition12_13">"(12) 서비스 관리자 또는 이에 준하는 자격을 사칭하거나 허가없이 취득하여 직권을 행사하는 행위"</string>
    <string name="service_terms_condition12_14">"(13) 회사 및 타인의 명예를 손상시키거나 업무를 방해하는 행위"</string>
    <string name="ad_agree1">"1. 광고성 정보의 이용목적"</string>
    <string name="ad_agree1_1">"유링크가 제공하는 이용자 맞춤형 서비스 및 각종 경품 행사, 이벤트 등의 광고성 정보를 이메일이나 문자, 푸시 알람 등을 통해 이용자에게 제공합니다. 마케팅 수신 동의는 거부하실 수 있으며, 동의 이후 고객의 의사에 따라 동의를 철회할 수 있습니다. 동의를 거부하시더라도 유링크가 제공하는 편의 서비스의 이용에는 제한을 받지 않습니다. 단, 이벤트 및 이용자 맞춤형 마케팅 서비스만 제한됩니다."</string>
    <string name="ad_agree2">"2. 미동의 시 불이익 사항"</string>
    <string name="ad_agree2_1">"개인정보보호법 제22조 제5항에 의거, 선택정보 사항에 대해 동의를 거부하시더라도 유링크에서 제공하는 편의 서비스 이용에 어떠한 제한도 없습니다. 단, 이벤트 및 이용자 맞춤형 마케팅 서비스만 제한됩니다."</string>
    <string name="ad_agree3">"3. 광고 수신 동의 철회"</string>
    <string name="ad_agree3_1">"현재 유링크에서 제공하는 \'광고 수신 약관\'에 동의할 경우, 회원가입 이후 철회 요청이 어렵습니다. 또한 향후 \'광고 수신 약관\'에 새롭게 동의하고자 하는 경우, 역시 회원가입 이후 동의 요청이 어렵습니다. 최초 회원가입 진행 시 \'광고 수신 동의\'를 신중히 선택해주세요."</string>
</resources>